tests/define-units-relationship/fail_1_is_1_mul_2.stderr
error: no rules expected `2`
  --> tests/define-units-relationship/fail_1_is_1_mul_2.rs:23:27
   |
23 |         U1 1 == U2 1 * U3 2,
   |                           ^ no rules expected this token in macro call
   |
note: while trying to match `1`
  --> src/define_units_relationship.rs
   |
   |     { $exact:tt $with_approx:tt $with_correlation:tt, $unit1:ident 1 == $unit2:ident 1 * $unit3:ident 1 } => {
   |                                                                                                       ^
